--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue-macros/volar": "^0.5.15",
     "@vue/test-utils": "^2.2.7",
+    "autoprefixer": "^10.4.13",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
     "cypress": "^12.3.0",
@@ -43,7 +44,9 @@
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-shiki": "^0.7.2",
     "pnpm": "^7.25.1",
+    "postcss": "^8.4.21",
     "shiki": "^0.12.1",
+    "tailwindcss": "^3.2.4",
     "taze": "^0.8.5",
     "typescript": "^4.9.4",
     "unocss": "^0.48.4",
