--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/head": "^1.0.22",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.29",
+    "swiper": "^9.0.2",
     "vue": "^3.2.45",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2",
