--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@unocss/reset": "^0.48.4",
     "@vueuse/core": "^9.11.0",
     "@vueuse/head": "^1.0.22",
+    "flowbite": "^1.6.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.29",
     "swiper": "^9.0.2",
